--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -3,7 +3,7 @@
     border-bottom: 2px solid rgba(0, 0, 0, 0.125);
   }
 
-  .nav-link.active {
+  .nav-link.active, .navbar-brand.active {
     font-weight: bold;
     color: lightgray !important;
   }
